--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/favicon_package_v0.16/favicon.ico" rel="icon">
+  <link href="assets/favicon_package_v0.16/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -396,7 +396,7 @@
               <div class="black-textarea">
                 <div class="firstline">Why my T</div>
                 <div class="secondline">One and only for you <img
-                    src="./assets/img/64b11864635cb0e2d0e23473_new-svg-13 1.png" alt=""></div>
+                    src="assets/img/64b11864635cb0e2d0e23473_new-svg-13 1.png" alt=""></div>
                 <div class="linethree">Lorem Ipsum is simply dummy text of the printing and typesetting has been
                   the industrys standard dummy text ever since</div>
 
@@ -408,7 +408,7 @@
                       <h5 class="card-title">One and only for you </h5>
                       <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting has been
                         the industrys standard dummy text ever since</p>
-                      <img src="./assets/img/feature/64ddbc5989aeb93f160948ac_bti-img 1.svg" alt="" />
+                      <img src="assets/img/feature/64ddbc5989aeb93f160948ac_bti-img 1.svg" alt="" />
                     </div>
                   </div>
 
@@ -417,7 +417,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Easy integration</h5>
                       <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting </p>
-                      <img src="./assets/img/feature/Clip path group.svg" alt="" />
+                      <img src="assets/img/feature/Clip path group.svg" alt="" />
                     </div>
                   </div>
                 </div>
@@ -425,12 +425,12 @@
                 <div class="col">
                   <div class="card custom-card-three">
                     <div class="card-body">
-                      <img src="./assets/img/feature/3rd.svg" alt="" />
+                      <img src="assets/img/feature/3rd.svg" alt="" />
                       <h5 class="card-title">One and only for you</h5>
                       <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting has been
                         the industrys standard dummy text ever since</p>
                       <div class="image-card">
-                        <img src="./assets/img/feature/4th.svg" alt="" />
+                        <img src="assets/img/feature/4th.svg" alt="" />
                       </div>
                     </div>
                   </div>
@@ -439,14 +439,14 @@
                   <div class="card custom-card-foure">
                     <div class="card-body">
                       <h5 class="card-title">Reliability</h5>
-                      <img src="./assets/img/feature/64ddbc5989aeb93f160948ac_bti-img 1.svg" alt="" />
+                      <img src="assets/img/feature/64ddbc5989aeb93f160948ac_bti-img 1.svg" alt="" />
                     </div>
                   </div>
                   <div class="card custom-card-five">
                     <div class="card-body">
                       <h5 class="card-title">24/7 support</h5>
                       <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting </p>
-                      <img src="./assets/img/feature/Clip path group.svg" alt="" />
+                      <img src="assets/img/feature/Clip path group.svg" alt="" />
                     </div>
                   </div>
                 </div>
