--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - QuickStart Bootstrap Template</title>
+  <title>MYT - AI Bookkeeping and VAT for Micro Businesse</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -257,35 +257,35 @@
 
         <!-- <div class="row gy-4"> -->
 
-          <!-- <div class="col-xl-2 col-md-3 col-6 client-logo">
+        <!-- <div class="col-xl-2 col-md-3 col-6 client-logo">
             <img src="assets/img/clients/c9.png" class="img-fluid" alt="">
           </div> -->
-          <!-- End Client Item -->
+        <!-- End Client Item -->
 
-          <!-- <div class="col-xl-2 col-md-3 col-6 client-logo">
+        <!-- <div class="col-xl-2 col-md-3 col-6 client-logo">
             <img src="assets/img/clients/c6.png" class="img-fluid" alt="">
           </div> -->
-          <!-- End Client Item -->
+        <!-- End Client Item -->
 
-          <!-- <div class="col-xl-2 col-md-3 col-6 client-logo">
+        <!-- <div class="col-xl-2 col-md-3 col-6 client-logo">
             <img src="assets/img/clients/c2.png" class="img-fluid" alt="">
           </div> -->
-          <!-- End Client Item -->
+        <!-- End Client Item -->
 
-          <!-- <div class="col-xl-2 col-md-3 col-6 client-logo">
+        <!-- <div class="col-xl-2 col-md-3 col-6 client-logo">
             <img src="assets/img/clients/c10.png" class="img-fluid" alt="">
           </div> -->
-          <!-- End Client Item -->
+        <!-- End Client Item -->
 
-          <!-- <div class="col-xl-2 col-md-3 col-6 client-logo">
+        <!-- <div class="col-xl-2 col-md-3 col-6 client-logo">
             <img src="assets/img/clients/c11.png" class="img-fluid" alt="">
           </div> -->
-          <!-- End Client Item -->
+        <!-- End Client Item -->
 
-          <!-- <div class="col-xl-2 col-md-3 col-6 client-logo">
+        <!-- <div class="col-xl-2 col-md-3 col-6 client-logo">
             <img src="assets/img/clients/c12.png" class="img-fluid" alt="">
           </div> -->
-          <!-- End Client Item -->
+        <!-- End Client Item -->
 
         <!-- </div> -->
 
@@ -484,9 +484,10 @@
               <a class="nav-link active show" data-bs-toggle="tab" data-bs-target="#features-tab-1">
                 <!-- <i class="bi bi-binoculars"></i> -->
                 <div>
-                  <h4 class="d-none d-lg-block">Lorem Ipsum is simply dummy </h4>
+                  <h4 class="d-none d-lg-block">WHO WOULD BENEFIT FROM USING MYT? </h4>
                   <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                    MyT is a cloud-based app that allows you to manage your accounting and bookkeeping tasks in one
+                    place. It's designed for small business, sole traders, freelancers and their accountants.
                   </p>
                 </div>
               </a>
@@ -495,9 +496,11 @@
               <a class="nav-link" data-bs-toggle="tab" data-bs-target="#features-tab-2">
                 <!-- <i class="bi bi-box-seam"></i> -->
                 <div>
-                  <h4 class="d-none d-lg-block">Lorem Ipsum is simply dummy</h4>
+                  <h4 class="d-none d-lg-block">WHAT ARE THE DEVICES THAT CAN I USE TO ACCESS MYT?
+                  </h4>
                   <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                    MyT App is available on any device that can access the internet, including desktop computers,
+                    laptops, tablets, and smartphones.
                   </p>
                 </div>
               </a>
@@ -535,9 +538,12 @@
               <a class="nav-link active show" data-bs-toggle="tab" data-bs-target="#features-tab-1">
                 <!-- <i class="bi bi-binoculars"></i> -->
                 <div>
-                  <h4 class="d-none d-lg-block">Lorem Ipsum is simply dummy </h4>
+                  <h4 class="d-none d-lg-block">HOW DO I GET STARTED AS A NEW USER?
+                  </h4>
                   <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                    Getting started with MyT is simple — just download the app and sign up for an account. Once you’ve
+                    completed the registration process, you can log in on your preferred device and start using right
+                    away.
                   </p>
                 </div>
               </a>
@@ -546,9 +552,9 @@
               <a class="nav-link" data-bs-toggle="tab" data-bs-target="#features-tab-2">
                 <!-- <i class="bi bi-box-seam"></i> -->
                 <div>
-                  <h4 class="d-none d-lg-block">Lorem Ipsum is simply dummy </h4>
+                  <h4 class="d-none d-lg-block">IS YOUR ACCOUNTING SOFTWARE SECURE?</h4>
                   <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                    We take privacy and security very seriously. Our accounting app has been carefully designed to keep your information safe.
                   </p>
                 </div>
               </a>
@@ -832,10 +838,10 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Pricing plans</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting has been<br /> the industrys standard dummy
-          text
-          ever since</p>
+        <h2>3 FLEXIBLE SUBSCRIPTION PLANS TO FIT YOUR NEEDS</h2>
+        <p>Time is money and MyT will save you both! Choose the subscription plan<br /> that works best for you, and
+          upgrade
+          or downgrade whenever you want<br /> without losing any data.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -844,56 +850,77 @@
 
           <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="100">
             <div class="pricing-item-one">
-              <h2><strong>Business Elite</strong></h2>
-              <p class="description">Essential features to boost efficiency and<br /> streamline operations</p>
-              <h4>£ 5.00 Euro</h4>
+              <h2><strong>STANDARD</strong></h2>
+              <!-- <p class="description">Essential features to boost efficiency and<br /> streamline operations</p> -->
+              <h4>£ 10.00 Euro</h4>
               <div class="pricing-list">
-                <ul>
+                <div style="text-align: center;">
+                  <p>
+                    AI analytics up to
+                  </p>
+                  <p>75 documents p/month
+                  </p>
+                </div>
+                <!-- <ul>
                   <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
                   <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
                   <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
                   <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
 
-                </ul>
+                </ul> -->
               </div>
-              <a href="#" class="cta-btn">GET STARTED</a>
+              <a href="#" class="cta-btn">TRY IT </a>
             </div>
           </div><!-- End Pricing Item -->
 
           <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="200">
             <div class="pricing-item-two featured">
               <!-- <p class="popular">Popular</p> -->
-              <h2><strong>Business</strong></h2>
-              <p class="description-two">Essential features to boost efficiency and<br /> streamline operations</p>
-              <h4>£ 5.00 Euro</h4>
+              <h2><strong>PLUS</strong></h2>
+              <!-- <p class="description-two">Essential features to boost efficiency and<br /> streamline operations</p> -->
+              <h4>£ 20.00 Euro</h4>
               <div class="pricing-list">
-                <ul>
+                <div style="text-align: center;">
+                  <p>
+                    AI analytics up to
+                  </p>
+                  <p>150 documents p/month
+                  </p>
+                </div>
+                <!-- <ul>
                   <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
                   <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
                   <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
                   <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
 
-                </ul>
+                </ul> -->
               </div>
-              <a href="#" class="cta-btn-two">GET STARTED</a>
+              <a href="#" class="cta-btn-two">TRY IT</a>
             </div>
           </div><!-- End Pricing Item -->
 
           <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="pricing-item-three">
-              <h2><strong>Core</strong></h2>
-              <p class="description">Essential features to boost efficiency and<br /> streamline operations</p>
-              <h4>£ 5.00 Euro</h4>
+              <h2><strong>Pro</strong></h2>
+              <!-- <p class="description">Essential features to boost efficiency and<br /> streamline operations</p> -->
+              <h4>£ 30.00 Euro</h4>
               <div class="pricing-list">
-                <ul>
-                  <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
-                  <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
-                  <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
-                  <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
+                <div style="text-align: center;">
+                  <p>
+                    AI analytics up to
+                  </p>
+                  <p>300 documents p/month
+                  </p>
+                </div>
+                <!-- <ul>
+                    <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
+                    <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
+                    <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
+                    <li><i class="bi bi-check"></i> <span>Lorem ipsum is simply dummy text</span></li>
 
-                </ul>
+                  </ul> -->
               </div>
-              <a href="#" class="cta-btn">GET STARTED</a>
+              <a href="#" class="cta-btn">TRY IT</a>
             </div>
           </div><!-- End Pricing Item -->
 
@@ -1196,7 +1223,7 @@
           <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Features</a></li>
-            <li><a href="#">Pricing</a></li>
+            <li><a onclick="gotoviewPort()">Pricing</a></li>
             <li><a href="#">Integrations</a></li>
           </ul>
         </div>
