--- a/index.html
+++ b/index.html
@@ -404,8 +404,7 @@
             <div class="firstline">Why my T</div>
             <div class="secondline">One and only for you <img src="assets/img/64b11864635cb0e2d0e23473_new-svg-13 1.png"
                 alt=""></div>
-            <div class="linethree">Lorem Ipsum is simply dummy text of the printing and typesetting has been
-              the industrys standard dummy text ever since</div>
+            <div class="linethree">YOUR ALL-IN-ONE ACCOUNTING SOLUTION</div>
 
           </div>
           <div class="row black-row">
@@ -470,13 +469,11 @@
       <div class="container" style="margin-top: 50px;">
         <div class="row justify-content-center d-flex">
 
-          <h2 class="text-center " style="font-weight: 600; margin-top: 40px;"> Your All In one Accounting<br />
-            Solution with My T</h2>
-          <p class="text-center" style="padding-bottom: 20px;">Lorem Ipsum is simply dummy text of the printing and
-            typesetting has been<br /> the
-            industrys standard
-            dummy
-            text ever since</p>
+          <h2 class="text-center " style="font-weight: 600; margin-top: 40px;"> GOT QUESTIONS?<br />
+            WE'VE GOT<br />ANSWERS.</h2>
+          <p class="text-center" style="padding-bottom: 20px;">We've compiled a list of the most frequently asked<br />
+            questions, to help you get started. If you need more<br /> information, please don't hesitate to contact us.
+          </p>
         </div>
         <div class="col-lg-10 d-flex align-items-center mobile-section">
           <ul class="nav nav-tabs" data-aos="fade-up" data-aos-delay="100">
@@ -554,7 +551,8 @@
                 <div>
                   <h4 class="d-none d-lg-block">IS YOUR ACCOUNTING SOFTWARE SECURE?</h4>
                   <p>
-                    We take privacy and security very seriously. Our accounting app has been carefully designed to keep your information safe.
+                    We take privacy and security very seriously. Our accounting app has been carefully designed to keep
+                    your information safe.
                   </p>
                 </div>
               </a>
@@ -744,13 +742,13 @@
 
     <div class="row justify-content-center gy-4 d-flex" style="margin-top: 80px; margin-bottom: 100px;">
       <div class="d-flex justify-content-center google-section">
-        Bookkeeping loved by companies around the globe
+        DON'T JUST TAKE OUR WORD FOR IT.<br />
+        GET REAL INSIGHTS FROM REAL CUSTOMERS!
       </div>
       <div class="d-flex justify-content-center mt-0">
 
 
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting has been <br />the industrys standard
-          dummy text ever since
+        <p>Google rating score:4.9 of 5,based on 15 reviews
         </p>
       </div>
       <div class="row d-flex justify-content-center">
