--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </ul>
 
           </li>
-          <li><a onclick="gotoviewPort()">Pricing</a>
+          <li><a href="#" onclick="gotoviewPort()"><span>Pricing</span></a>
           </li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -1250,7 +1250,7 @@
   <script>
     function gotoviewPort() {
       // go to the top of the window
-      window.scrollTo(0, 4470);
+      window.scrollTo(0, 4950);
     }
   </script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
