logos and content

--- a/index.html
+++ b/index.html
@@ -884,9 +884,31 @@
                 </div>
               </div>
               <a href="#" class="cta-btn">TRY IT</a>
+              <img src="assets/img/pricing/visa.png" alt="">
             </div>
-          </div><!-- End Pricing Item -->
 
+
+          </div><!-- End Pricing Item -->
+          <div>
+            <h3 class="text-center">
+              The tools you need to scale, included with every plan
+            </h3>
+            <div>
+              <div>
+                <p>Invoicing: Generate customer invoices.</p>
+                <p>Tax Compliance: Submit VAT returns to HMRC.</p>
+                <p>Bank Statement Processing: Upload and extract data from bank statements.</p>
+                <p>BOPP Integration: Integrate with the BOPP.</p>
+                <p>Customer Management: Maintain and update the customer list.</p>
+              </div>
+              <div>
+                <p>Online Bookkeeping: Streamline financial record keeping.</p>
+                <p>Expense Tracking: Categorize business expenses.</p>
+                <p>Receipt Scanning: Scan and extract data from receipts for expense records.</p>
+                <p>Financial Reporting: Generate various financial reports like profit and loss and balance sheet.</p>
+              </div>
+            </div>
+          </div>
         </div>
 
       </div>
@@ -1225,13 +1247,13 @@
         <div>
 
 
-          <p>© <span>2024</span> <strong class="px-1 sitename">Xtrak. </strong><span>All Rights Reserved</span></p>
+          <p>© <span>2024</span> <strong class="px-1 sitename">MyT. </strong><span>All Rights Reserved</span></p>
         </div>
         <div class="credits">
 
 
           Designed by
-          <a class="text-white" href="#">Xtrak</a>
+          <a class="text-white" href="#">MyT</a>
         </div>
       </div>
     </div>
