--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
       <section id="more-features" class="more-features section"
         style="margin-top: 100px; background-color: #111111; padding-bottom: 50px;">
 
-        <div class="container black-section">
+        <div class="container black-section" data-aos="fade-up" data-aos-delay="100">
           <div class="black-textarea">
             <div class="firstline">Why my T</div>
             <div class="secondline">One and only for you <img src="assets/img/64b11864635cb0e2d0e23473_new-svg-13 1.png"
@@ -388,7 +388,7 @@
           </div>
           <div class="row black-row">
             <div class="col">
-              <div class="card custom-card">
+              <div class="card custom-card" data-aos="fade-up" data-aos-delay="250">
                 <div class="card-body">
                   <h5 class="card-title">One and only for you </h5>
                   <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting has been
@@ -398,7 +398,7 @@
               </div>
 
 
-              <div class="card custom-card-two">
+              <div class="card custom-card-two" data-aos="fade-up" data-aos-delay="350">
                 <div class="card-body">
                   <h5 class="card-title">Easy integration</h5>
                   <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting </p>
@@ -408,7 +408,7 @@
             </div>
 
             <div class="col">
-              <div class="card custom-card-three">
+              <div class="card custom-card-three" data-aos="fade-up" data-aos-delay="450">
                 <div class="card-body">
                   <img src="assets/img/feature/3rd.svg" alt="" />
                   <h5 class="card-title">One and only for you</h5>
@@ -421,13 +421,13 @@
               </div>
             </div>
             <div class="col">
-              <div class="card custom-card-foure">
+              <div class="card custom-card-foure" data-aos="fade-up" data-aos-delay="550">
                 <div class="card-body">
                   <h5 class="card-title">Reliability</h5>
                   <img src="assets/img/feature/64ddbc5989aeb93f160948ac_bti-img 1.svg" alt="" />
                 </div>
               </div>
-              <div class="card custom-card-five">
+              <div class="card custom-card-five" data-aos="fade-up" data-aos-delay="650">
                 <div class="card-body">
                   <h5 class="card-title">24/7 support</h5>
                   <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting </p>
@@ -889,23 +889,73 @@
 
 
           </div><!-- End Pricing Item -->
-          <div>
-            <h3 class="text-center">
+          <div class="container " style="margin-top: 100px;">
+            <p class="text-center text-white mb-5 h2">
               The tools you need to scale, included with every plan
-            </h3>
-            <div>
-              <div>
-                <p>Invoicing: Generate customer invoices.</p>
-                <p>Tax Compliance: Submit VAT returns to HMRC.</p>
-                <p>Bank Statement Processing: Upload and extract data from bank statements.</p>
-                <p>BOPP Integration: Integrate with the BOPP.</p>
-                <p>Customer Management: Maintain and update the customer list.</p>
+            </p>
+            <div class="row d-flex  h6">
+              <div class="col-lg-6 d-grid gap-3">
+                <div class="d-flex mb-3 align-items-center"> <img src="assets/img/icon/check-circle.svg" alt="" style="margin-right: 10px; width: 20px;">
+                  <span>
+
+                    Invoicing: Generate customer invoices.
+
+                  </span>
+                </div>
+                <div class="d-flex mb-3 align-items-center"> <img src="assets/img/icon/check-circle.svg" alt="" style="margin-right: 10px; width: 20px;">
+                  <span>
+
+                    Tax Compliance: Submit VAT returns to HMRC.
+
+                  </span>
+                </div>
+                <div class="d-flex mb-3 align-items-center"> <img src="assets/img/icon/check-circle.svg" alt="" style="margin-right: 10px; width: 20px;">
+                  <span>
+
+                    Bank Statement Processing: Upload and extract data from bank statements.
+
+                  </span>
+                </div>
+                <div class="d-flex mb-3 align-items-center"> <img src="assets/img/icon/check-circle.svg" alt="" style="margin-right: 10px; width: 20px;">
+                  <span>
+
+                    BOPP Integration: Integrate with the BOPP.
+
+                  </span>
+                </div>
+                <div class="d-flex mb-3 align-items-center"><img src="assets/img/icon/check-circle.svg" alt="" style="margin-right: 10px; width: 20px;">
+                  <span>
+                    Customer Management: Maintain and update the customer list.
+
+                  </span>
+                </div>
               </div>
-              <div>
-                <p>Online Bookkeeping: Streamline financial record keeping.</p>
-                <p>Expense Tracking: Categorize business expenses.</p>
-                <p>Receipt Scanning: Scan and extract data from receipts for expense records.</p>
-                <p>Financial Reporting: Generate various financial reports like profit and loss and balance sheet.</p>
+              <div class="col-lg-6 d-grid gap-3">
+                <div class="d-flex mb-3 align-items-center">
+                  <img src="assets/img/icon/check-circle.svg" alt="" style="margin-right: 10px; width: 20px;">
+                  <span>
+                    Online Bookkeeping: Streamline financial record keeping.
+                  </span>
+                </div>
+                <div class="d-flex mb-3 align-items-center">
+                  <img src="assets/img/icon/check-circle.svg" alt="" style="margin-right: 10px; width: 20px;">
+                  <span>
+                    Expense Tracking: Categorize business expenses.
+                  </span>
+                </div>
+                <div class="d-flex mb-3 align-items-center">
+                  <img src="assets/img/icon/check-circle.svg" alt="" style="margin-right: 10px; width: 20px;">
+                  <span>
+                    Receipt Scanning: Scan and extract data from receipts for expense records.
+                  </span>
+                </div>
+                <div class="d-flex mb-3 align-items-center">
+                  <img src="assets/img/icon/check-circle.svg" alt="" style="margin-right: 10px; width: 20px;">
+                  <span>
+                    Financial Reporting: Generate various financial reports like profit and loss and balance sheet.
+                  </span>
+                </div>
+
               </div>
             </div>
           </div>
@@ -1026,10 +1076,10 @@
       </div>
 
 
-      <section id="gallery">
+      <section id="gallery" class="">
         <div class="container">
           <div class="row">
-            <div class="col-lg-4 mb-4">
+            <div class="col-lg-4 mb-4 " data-aos="fade-up" data-aos-delay="100">
               <div class="card " style="border-radius: 20px;">
                 <div style="max-height: 276px; ">
 
@@ -1046,7 +1096,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 mb-4">
+            <div class="col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="250">
               <div class="card" style="border-radius: 20px;">
 
                 <div class="" style="max-height: 276px;">
@@ -1062,7 +1112,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 mb-4">
+            <div class="col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="400">
               <div class="card" style="border-radius: 20px;">
                 <div class="" style="max-height: 276px;">
                   <img src="assets/img/testimonials/testi3.png" alt="" class="card-img-top"
