--- a/index.html
+++ b/index.html
@@ -1271,6 +1271,8 @@
             <li><a href="#">Careers</a></li>
             <li><a href="#">Blogs</a></li>
             <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms and Conditions</a></li>
           </ul>
         </div>
 
