--- a/index.html
+++ b/index.html
@@ -605,6 +605,17 @@
                 </div>
               </div>
               <a href="#" class="cta-btn">TRY IT </a>
+              <div class="row">
+                <img src="assets/img/pricing/294654_visa_icon.svg" alt="" style="width: 70px;">
+                <img src="assets/img/pricing/mastercard.svg" alt="" style="width: 70px;">
+                <img src="assets/img/pricing/4373195_card_credit_discover_logo_logos_icon.svg" alt=""
+                  style="width: 70px;">
+                <img src="assets/img/pricing/206682_american_express_method_card_payment_icon.svg" alt=""
+                  style="width: 70px;">
+                <img src="assets/img/pricing/apple-pay-logo-svgrepo-com.svg" alt="" style="width: 70px;">
+              </div>
+
+
             </div>
           </div><!-- End Pricing Item -->
 
@@ -634,6 +645,20 @@
                 </div>
               </div>
               <a href="#" class="cta-btn-two">TRY IT</a>
+
+              <div class="row">
+                <img src="assets/img/pricing/294654_visa_icon.svg" alt="" style="width: 70px;">
+                <img src="assets/img/pricing/mastercard.svg" alt="" style="width: 70px;">
+                <img src="assets/img/pricing/4373195_card_credit_discover_logo_logos_icon.svg" alt=""
+                  style="width: 70px;">
+                <img src="assets/img/pricing/206682_american_express_method_card_payment_icon.svg" alt=""
+                  style="width: 70px;">
+                <img src="assets/img/pricing/applepayblack.svg" alt="" style="width: 70px;">
+              </div>
+
+
+
+
             </div>
           </div><!-- End Pricing Item -->
 
@@ -662,7 +687,17 @@
                 </div>
               </div>
               <a href="#" class="cta-btn">TRY IT</a>
-              <img src="assets/img/pricing/visa.png" alt="">
+              <div class="row">
+                <img src="assets/img/pricing/294654_visa_icon.svg" alt="" style="width: 70px;">
+                <img src="assets/img/pricing/mastercard.svg" alt="" style="width: 70px;">
+                <img src="assets/img/pricing/4373195_card_credit_discover_logo_logos_icon.svg" alt=""
+                  style="width: 70px;">
+                <img src="assets/img/pricing/206682_american_express_method_card_payment_icon.svg" alt=""
+                  style="width: 70px;">
+                <img src="assets/img/pricing/apple-pay-logo-svgrepo-com.svg" alt="" style="width: 70px;">
+              </div>
+
+
             </div>
 
 
