--- a/index.html
+++ b/index.html
@@ -12,14 +12,12 @@
   <link href="assets/favicon_package_v0.16/favicon.ico" rel="icon">
   <link href="assets/favicon_package_v0.16/apple-touch-icon.png" rel="apple-touch-icon">
 
-  <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
 
-  <!-- Google figma fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Onest:wght@100..900&display=swap" rel="stylesheet">
@@ -30,7 +28,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap"
     rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -40,35 +37,13 @@
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
-  <!-- <style>
-    .body::-webkit-scrollbar {
-      display: none;
-    }
 
-    /* Hide scrollbar for IE, Edge and Firefox */
-    .body {
-      -ms-overflow-style: none;
-      /* IE and Edge */
-      scrollbar-width: none;
-      /* Firefox */
-    }
-  </style>
- -->
-
-
-  <!-- =======================================================
-  * Template Name: QuickStart
-  * Template URL: https://bootstrapmade.com/quickstart-bootstrap-startup-website-template/
-  * Updated: May 10 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body class="index-page">
 
   <header id="header" class="header d-flex align-items-center fixed-top">
-    <div class="container-fluid container-xxl position-relative d-flex align-items-center">
+    <div class="container-fluid container-xxl position-relative d-flex align-items-center justify-content-between">
 
       <nav id="navmenu" class="navmenu">
         <ul>
@@ -94,6 +69,8 @@
           </li>
           <li><a href="#" onclick="gotoviewPort()"><span>Pricing</span></a>
           </li>
+          <li class="loginbutton2"><a href="#" class=""><span>Log In</span></a>
+          </li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -111,76 +88,6 @@
 
   <main class=" main">
 
-    <!-- Hero Section -->
-    <!-- <section id="hero" class="hero section"> -->
-    <!--      
-      <div class="container text-center">
-        <div class="d-flex flex-column justify-content-center align-items-center">
-          <h1 data-aos="fade-up" class="">Welcome to <span>QuickStart</span></h1>
-          <p data-aos="fade-up" data-aos-delay="100" class="">Quickly start your project now and set the stage for
-            success<br></p>
-          <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
-            <a href="#about" class="btn-get-started">Get Started</a>
-            <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ"
-              class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch
-                Video</span></a>
-          </div>
-          <img src="assets/img/hero-services-img.webp" class="img-fluid hero-img" alt="" data-aos="zoom-out"
-            data-aos-delay="300">
-        </div>
-      </div> -->
-
-    <!-- </section> -->
-    <!-- /Hero Section -->
-
-    <!-- Featured Services Section -->
-    <!-- <section id="featured-services" class="featured-services section"> -->
-
-    <!-- <div class="container">
-
-        <div class="row gy-4">
-
-          <div class="col-xl-4 col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <div class="service-item d-flex">
-              <div class="icon flex-shrink-0"><i class="bi bi-briefcase"></i></div>
-              <div>
-                <h4 class="title"><a href="#" class="stretched-link">Lorem Ipsum</a></h4>
-                <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
-              </div>
-            </div>
-          </div> -->
-    <!-- End Service Item -->
-
-    <!-- <div class="col-xl-4 col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <div class="service-item d-flex">
-              <div class="icon flex-shrink-0"><i class="bi bi-card-checklist"></i></div>
-              <div>
-                <h4 class="title"><a href="#" class="stretched-link">Dolor Sitema</a></h4>
-                <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip exa</p>
-              </div>
-            </div> -->
-    <!-- </div> -->
-    <!-- End Service Item -->
-
-    <!-- <div class="col-xl-4 col-lg-6" data-aos="fade-up" data-aos-delay="300">
-            <div class="service-item d-flex">
-              <div class="icon flex-shrink-0"><i class="bi bi-bar-chart"></i></div>
-              <div>
-                <h4 class="title"><a href="#" class="stretched-link">Sed ut perspiciatis</a></h4>
-                <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum</p>
-              </div>
-            </div>
-          </div> -->
-    <!-- End Service Item -->
-
-    <!-- </div> -->
-
-    <!-- </div> -->
-
-    <!-- </section> -->
-    <!-- /Featured Services Section -->
-
-    <!-- About Section -->
     <section id="about" class="about section">
 
       <div class="containerr  ">
@@ -439,7 +346,7 @@
 
 
       <div class="container" style="margin-top: 50px;">
-        <div class="row justify-content-center d-flex">
+        <div class="row justify-content-center d-flex" data-aos="fade-up">
 
           <h2 class="text-center " style="font-weight: 600; margin-top: 40px;"> GOT QUESTIONS?<br />
             WE'VE GOT ANSWERS.</h2>
@@ -605,7 +512,7 @@
                 </div>
               </div>
               <a href="#" class="cta-btn">TRY IT </a>
-              <div class="row">
+              <div class="row d-flex justify-content-center align-items-center">
                 <img src="assets/img/pricing/294654_visa_icon.svg" alt="" style="width: 70px;">
                 <img src="assets/img/pricing/mastercard.svg" alt="" style="width: 70px;">
                 <img src="assets/img/pricing/4373195_card_credit_discover_logo_logos_icon.svg" alt=""
@@ -646,7 +553,7 @@
               </div>
               <a href="#" class="cta-btn-two">TRY IT</a>
 
-              <div class="row">
+              <div class="row d-flex justify-content-center align-items-center">
                 <img src="assets/img/pricing/294654_visa_icon.svg" alt="" style="width: 70px;">
                 <img src="assets/img/pricing/mastercard.svg" alt="" style="width: 70px;">
                 <img src="assets/img/pricing/4373195_card_credit_discover_logo_logos_icon.svg" alt=""
@@ -687,7 +594,7 @@
                 </div>
               </div>
               <a href="#" class="cta-btn">TRY IT</a>
-              <div class="row">
+              <div class="row d-flex justify-content-center align-items-center">
                 <img src="assets/img/pricing/294654_visa_icon.svg" alt="" style="width: 70px;">
                 <img src="assets/img/pricing/mastercard.svg" alt="" style="width: 70px;">
                 <img src="assets/img/pricing/4373195_card_credit_discover_logo_logos_icon.svg" alt=""
@@ -702,7 +609,7 @@
 
 
           </div><!-- End Pricing Item -->
-          <div class="container " style="margin-top: 100px;">
+          <div class="container " style="margin-top: 100px;" data-aos="fade-up">
             <p class="text-center text-white mb-5 h1">
               The tools you need to scale, included with every plan
             </p>
@@ -961,40 +868,42 @@
           <a href="index.html" class="logo d-flex align-items-center">
             <img src="assets/img/download.svg" alt="">
           </a>
-          <div class="footer-contact pt-3">
+          <div class="footer-contact pt-3" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom"
+            data-aos-delay="100">
             <p>Our technical intelligence can put you on the</p>
             <p>fast track to success. That's the promise from</p>
             <p>Houston IT developers.</p><br />
             <p>Follow us on social media!</p>
           </div>
           <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
+            <a data-aos="flip-up" data-aos-delay="100" href=""><i class="bi bi-twitter"></i></a>
+            <a data-aos="flip-up" data-aos-delay="200" href=""><i class="bi bi-facebook"></i></a>
+            <a data-aos="flip-up" data-aos-delay="300" href=""><i class="bi bi-instagram"></i></a>
+            <a data-aos="flip-up" data-aos-delay="400" href=""><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
 
         <div class="col-lg-3 col-md-3 footer-links">
           <h4>Product</h4>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Features</a></li>
-            <li><a onclick="gotoviewPort()">Pricing</a></li>
-            <li><a href="#">Integrations</a></li>
+            <li data-aos="flip-up" data-aos-delay="100"><a href="#">Home</a></li>
+            <li data-aos="flip-up" data-aos-delay="200"><a href="#">Features</a></li>
+            <li data-aos="flip-up" data-aos-delay="300"><a onclick="gotoviewPort()">Pricing</a></li>
+            <li data-aos="flip-up" data-aos-delay="400"><a href="#">Integrations</a></li>
           </ul>
         </div>
 
         <div class="col-lg-3 col-md-3 footer-links">
           <h4>Compnay</h4>
           <ul>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">FAQ</a></li>
-            <li><a href="#">Careers</a></li>
-            <li><a href="#">Blogs</a></li>
-            <li><a href="#">Contact Us</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Terms and Conditions</a></li>
+            <li data-aos="flip-up" data-aos-delay="100"><a href="#">About us</a></li>
+            <li data-aos="flip-up" data-aos-delay="200"><a href="#">FAQ</a></li>
+            <li data-aos="flip-up" data-aos-delay="300"><a href="#">Careers</a></li>
+            <li data-aos="flip-up" data-aos-delay="400"><a href="#">Blogs</a></li>
+            <li data-aos="flip-up" data-aos-delay="500"><a href="#">Contact Us</a></li>
+            <li data-aos="flip-up" data-aos-delay="600"><a target="_blank" href="privacy.html">Privacy Policy</a></li>
+            <li data-aos="flip-up" data-aos-delay="700"><a target="_blank" href="termsandconditions.html">Terms and
+                Conditions</a></li>
           </ul>
         </div>
 
@@ -1002,18 +911,18 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Contact</h4>
           <ul>
-            <li><a href="#">Email</a></li>
-            <li><a href="#">Instagram</a></li>
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Twitter / X</a></li>
-            <li><a href="#">LinkedIn</a></li>
+            <li data-aos="flip-up" data-aos-delay="100"><a href="#">Email</a></li>
+            <li data-aos="flip-up" data-aos-delay="200"><a href="#">Instagram</a></li>
+            <li data-aos="flip-up" data-aos-delay="300"><a href="#">Facebook</a></li>
+            <li data-aos="flip-up" data-aos-delay="400"><a href="#">Twitter / X</a></li>
+            <li data-aos="flip-up" data-aos-delay="500"><a href="#">LinkedIn</a></li>
           </ul>
         </div>
 
       </div>
     </div>
 
-    <div class=" copyright text-left mt-4">
+    <div class=" copyright text-left mt-4" >
       <div class="container">
 
 
