--- a/index.html
+++ b/index.html
@@ -133,8 +133,29 @@
           <div class="col-lg-6 about-images d-flex align-items-center justify-content-center flex-column"
             data-aos="fade-up" data-aos-delay="200">
 
-            <div class="col-lg-8">
+            <!-- <div class="col-lg-8">
               <img src="./images/landing1.png" class="img-fluid" alt="">
+            </div> -->
+            <div id="carouselHero" class="carousel slide">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="/images/landing1.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="/images/landing1.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="/images/landing1.png" class="d-block w-100" alt="...">
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
             </div>
             <div class="col-lg-6">
 
